fixed navbar spacing

--- a/styles/index.css
+++ b/styles/index.css
@@ -229,7 +229,8 @@ footer a {
 }
 
 footer a:hover {
-    color: #D1B07E;
+    color: #aa7670;
+;
 }
 
 /* Responsive behavior */
